samples/_failures_safe/1761168484_ba0d56_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18442e80.c: In function ‘main’:
./samples/SAFE/__tmp_18442e80.c:132:9: error: expected declaration or statement at end of input
  132 |         if (strncmp(input, "DONE", 4) == 0) break;
      |         ^~
./samples/SAFE/__tmp_18442e80.c:132:9: error: expected declaration or statement at end of input
